--- a/index.html
+++ b/index.html
@@ -3,11 +3,49 @@
 <head>
 
 <title> Calculator</title>
-<link rel='stylesheet' type='text/css' href='style.css'>A
+<link rel='stylesheet' type='text/css' href='style.css'>
 
 </head>
 
 <body>
+
+<div class='calccontainer'>
+	<div class='display'>
+
+	<h1>10</h1>	
+
+	</div>
+
+	<div class='actions'>
+	<input type="button" class="actionsBtns" value='Delete'>
+	<input type="button" class="actionsBtns" value='Clear'>
+
+	</div>
+
+	<div class="keyboard">
+	<input type="button" value='7'>
+	<input type="button" value='8'>
+	<input type="button" value='9'>
+	<input type="button" value='%'>
+	<input type="button" value='4'>
+	<input type="button" value='5'>
+	<input type="button" value='6'>
+	<input type="button" value='x'>
+	<input type="button" value='1'>
+	<input type="button" value='2'>
+	<input type="button" value='3'>
+	<input type="button" value='-'>
+	<input type="button" value='.'>
+	<input type="button" value='0'>
+	<input type="button" value='='>
+	<input type="button" value='+'>
+
+	</div>
+
+
+</div>
+
+
 
 
 
