Finish done interactive visuals

--- a/index.html
+++ b/index.html
@@ -12,33 +12,33 @@
 <div class='calccontainer'>
 	<div class='display'>
 
-	<h1>10</h1>	
+	<h1 id="displayValue" ></h1>	
 
 	</div>
 
 	<div class='actions'>
-	<input type="button" class="actionsBtns" value='Delete'>
-	<input type="button" class="actionsBtns" value='Clear'>
+	<input type="button" class="actionsBtns" id="delBtn" value='Delete'>
+	<input type="button" class="actionsBtns" id="clearBtn" value='Clear'>
 
 	</div>
 
 	<div class="keyboard">
-	<input type="button" value='7'>
-	<input type="button" value='8'>
-	<input type="button" value='9'>
-	<input type="button" value='%'>
-	<input type="button" value='4'>
-	<input type="button" value='5'>
-	<input type="button" value='6'>
-	<input type="button" value='x'>
-	<input type="button" value='1'>
-	<input type="button" value='2'>
-	<input type="button" value='3'>
-	<input type="button" value='-'>
-	<input type="button" value='.'>
-	<input type="button" value='0'>
-	<input type="button" value='='>
-	<input type="button" value='+'>
+	<input type="button" class="keyBtn" value='7'>
+	<input type="button" class="keyBtn" value='8'>
+	<input type="button" class="keyBtn" value='9'>
+	<input type="button" class="keyBtn" value='%'>
+	<input type="button" class="keyBtn" value='4'>
+	<input type="button" class="keyBtn" value='5'>
+	<input type="button" class="keyBtn" value='6'>
+	<input type="button" class="keyBtn" value='×'>
+	<input type="button" class="keyBtn" value='1'>
+	<input type="button" class="keyBtn" value='2'>
+	<input type="button" class="keyBtn" value='3'>
+	<input type="button" class="keyBtn" value='-'>
+	<input type="button" class="keyBtn" value='.'>
+	<input type="button" class="keyBtn" value='0'>
+	<input type="button" class="equalBtn" value='='>
+	<input type="button" class="keyBtn" value='+'>
 
 	</div>
 
